Improvement - Making the web responsive and adding more i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,5 +141,31 @@
   "sprint_retro_five": "By the end of the Sprint Retrospective, the Scrum Team should have identified improvements that it will implement in the next Sprint. Implementing these improvements in the next Sprint is the adaptation to the inspection of the Scrum Team itself. Although improvements may be implemented at any time, the Sprint Retrospective provides a formal opportunity to focus on inspection and adaptation.",
   "sprint-retro_list_one": "Inspect how the last Sprint went with regards to people, relationships, process, and tools;",
   "sprint-retro_list_two": "Identify and order the major items that went well and potential improvements; and,",
-  "sprint-retro_list_three": "Create a plan for implementing improvements to the way the Scrum Team does its work."
+  "sprint-retro_list_three": "Create a plan for implementing improvements to the way the Scrum Team does its work.",
+  "requirement_desc": "Create login/logout view",
+  "product-increment_done":"Items Meets definition of Done",
+  "sprint-planning__event-time": "8hs for one-month sprint",
+  "answer": "answer",
+  "daily-scrum_event-time": "15min every 24hs",
+  "daily-scrum_what-did": "What did I do yesterday ?",
+  "daily-scrum_what-will": "What will I do today ?",
+  "daily-scrum_impediments": "Do I see any impediment ?",
+  "inspect-adapt": "Inspect and Adapt",
+  "sprint-review_refactor":"Refactor Produt Backlog (if needed)",
+  "sprint-review_event-time": "4hs for one-month sprint",
+  "sprint-retro_event-time": "3hs for one-month sprint",
+  "inspect": "inspect",
+  "identify": "identify",
+  "create": "create",
+  "sprint-retro_inspect": " People relationships, proccess and tools",
+  "sprint-retro_identify": "Items that went well",
+  "sprint-retro_create": "New plan of work",
+  "organization": "Organization",
+  "roles_scrum-master_v2": "Scrum Master",
+  "roles_product-owner_v2": "Prduct Owner",
+  "roles_dev-team_v2": "Dev Team",
+  "per-team": "per team",
+  "sprint-backlog_img": "sprint_backlog_panel.svg",
+  "product-backlog_img": "product_backlog_panel.svg",
+  "ownership_img": "ownership.svg"
 }
