--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -23,6 +23,9 @@
   "avatar_mssge_welcome_one": "Hey, Soy el Scrum Master, mi rol es entrenarte y guiarte para que entiendas Scrum. <br> Si quieres saber más <strong>dale click a cualquiera de los titulos de abajo! </strong>",
   "avatar_mssge_events_one": "En Scrum existen eventos predefinidos con el fin de crear regularidad y minimizar la necesidad de reuniones no definidas en Scrum. Todos los eventos son bloques de tiempo (time-boxes), de tal modo que todos tienen una duración máxima. ",
   "avatar_mssge_events_two": "Además del propio Sprint, que es un contenedor del resto de eventos, cada uno de los eventos de Scrum constituye una oportunidad formal para la <strong>inspección</strong> y <strong>adaptación</strong> de algún aspecto. Estos eventos están diseñados específicamente para habilitar las vitales transparencia e inspección.",
+  "avatar_mssge_scrum-master_one": "El Scrum Master es el responsable en asegurar que se entienda y se adopte Scrum. Los Scrum Masters hacen esto asegurándose de que el Equipo Scrum trabaja ajustándose a la teoría, prácticas y reglas de Scrum..",
+  "avatar_mssge_scrum-master_two": "El Scrum Master es un sirviente líder que está al servicio del, y para el Equipo Scrum. El Scrum Master ayuda a las personas externas al Equipo Scrum a entender qué interacciones con el Equipo Scrum pueden ser útiles y cuáles no.",
+  "avatar_mssge_scrum-master_three": "El Scrum Master ayuda a todos a modificar estas interacciones para maximizar el valor creado por el Equipo Scrum.",
   "avatar_mssge_scrum_one": "Scrum es un marco de trabajo para el desarrollo y el mantenimiento de productos complejos. Esta definición contiene los <strong>roles, eventos y artefactos</strong> de Scrum, y las reglas que los relacionan.",
   "avatar_mssge_scrum_two": "Cada componente dentro del marco de trabajo sirve a un propósito específico y es esencial para el éxito de Scrum y para su uso.",
   "avatar_mssge_scrum_three": "Scrum es: <br> <ul> <li>Ligero</li><li>Fácil de entender</li> <li>Extremadamente dificil de llegar a dominar</li></ul>",
@@ -34,18 +37,19 @@
   "avatar_mssge_roles_one": "El Equipo Scrum consiste en un <strong> Dueño de Producto (Product Owner)</strong> , el <strong> Equipo de Desarrollo (Development Team)</strong> y un <strong>Scrum Master</strong>.",
   "avatar_mssge_roles_two": " Los equipos son <strong>autoorganizados</strong>: Eligen la mejor forma de llevar a cabo su trabajo y no son dirigidos por personas externas al equipo.",
   "avatar_mssge_roles_three": "Los equipos son <strong> multifuncionales</strong> tienen todas las competencias necesarias para llevar a cabo el trabajo sin depender de otras personas que no son parte del equipo.",
-  "avatar_mssge_artifacts_backlog_one": "<strong>La Pila de Producto</strong> es una lista ordenada de todo lo que podría ser necesario en el producto, y es la única fuente de requisitos para cualquier cambio a realizarse en el producto. El <strong> Dueño de Producto (Product Owner) </strong> es el responsable de la Pila del Producto, incluyendo su contenido, disponibilidad y ordenación.",
+  "avatar_mssge_artifacts_backlog_one": "<strong>La Pila de Producto</strong> es la única fuente de requisitos para cualquier cambio a realizarse en el producto. El <strong> Dueño de Producto (Product Owner) </strong> es el responsable de la Pila del Producto, incluyendo su contenido, disponibilidad y ordenación.",
   "avatar_mssge_artifacts_backlog_two": "Una <strong> Pila de Producto </strong> nunca está completa. El desarrollo más temprano de la misma solo refleja los requisitos conocidos y mejor entendidos al principio.",
   "avatar_mssge_artifacts_sprintBacklog_one" : "La <strong> Pila del Sprint </strong> es el conjunto de elementos de la <strong> Pila de Producto </strong> seleccionados para el Sprint, más un plan para entregar el Incremento de producto y conseguir el Objetivo del Sprint.",
-  "avatar_mssge_artifacts_sprintBacklog_two" : "La <strong> Pila del Sprint </strong>  es una predicción hecha por el Equipo de Desarrollo (Development Team) acerca de qué funcionalidad formará parte del próximo Incremento y del trabajo necesario para entregar esa funcionalidad en un Incremento \"Terminado\".",
+  "avatar_mssge_artifacts_sprintBacklog_two" : "Es una predicción hecha por el Equipo de Desarrollo (Dev. Team) acerca de qué funcionalidad formará parte del próximo Incremento y del trabajo necesario para entregar esa funcionalidad \"Terminada\".",
   "avatar_mssge_artifacts_increment_one": "<strong> El Incremento </strong> es la suma de todos los elementos de la Pila del Producto (Product Backlog) completados durante un Sprint y el valor de los incrementos de todos los Sprints anteriores.",
+  "avatar_mssge_artifacts_increment_two": "Al final de un Sprint el nuevo Incremento debe estar “Terminado”, lo cual significa que está en condiciones de ser utilizado y que cumple la Definición de “Terminado” del Equipo Scrum.",
   "avatar_mssge_values_commitment_one": "People personally commit to achieving the goals of the Scrum Team.",
   "avatar_mssge_values_courage_one": "Scrum Team members have courage to do the right thing and work on tough problems.",
   "avatar_mssge_values_opennes_one": "The Scrum team and its stakeholders agree to be open about all the work and challenges with performing work.",
   "avatar_mssge_values_respect_one": "Scrum Team members respect each other to be capable, independent people.",
   "avatar_mssge_values_focus_one": "Everyone focuses on the work of the Sprint and the goals of the Scrum Team.",
   "avatar_mssge_roles_scrumMaster_one": "El <strong> Scrum Master</strong> ayuda a las personas externas al Equipo Scrum a entender qué interacciones con el Equipo Scrum pueden ser útiles y cuáles no. El Scrum Master ayuda a todos a modificar estas interacciones para maximizar el valor creado por el Equipo Scrum.",
-  "avatar_mssge_roles_productOwner_one": "El <strong> Propietario del Producto </strong>(Product Owner) es el responsable de maximizar el valor del producto y el trabajo del Equipo de Desarrollo (Development Team). Cómo se lleva a cabo puede variar ampliamente entre distintas organizaciones, equipos Scrum e individuos.",
+  "avatar_mssge_roles_productOwner_one": "El <strong> Propietario del Producto </strong> es el responsable de maximizar el valor del producto y el trabajo del Equipo de Desarrollo. Cómo se lleva a cabo puede variar ampliamente entre distintas organizaciones, equipos Scrum e individuos.",
   "avatar_mssge_roles_devTeam_one": "El Equipo de Desarrollo (Development Team) se compone en base a los profesionales que realizan el trabajo de entregar un Incremento de producto “Terminado” que potencialmente se pueda poner en producción al final de cada Sprint.",
   "avatar_mssge_roles_devTeam_two": " Solo los miembros del Equipo de Desarrollo (Development Team) participan en la creación del Incremento.",
   "avatar_mssge_events_sprint-planning_one": "El trabajo a realizar durante el Sprint se planifica en la reunión de Planificación del Sprint (Sprint Planning). Este plan se crea mediante el trabajo colaborativo de todo el Equipo Scrum.",
@@ -137,5 +141,32 @@
   "sprint_retro_five": "Al final de la Retrospectiva del Sprint (Sprint Retrospective) el Equipo Scrum debería haber identificado mejoras que implementará en el próximo Sprint. El hecho de implementar estas mejoras en el siguiente Sprint constituye la adaptación subsecuente a la inspección del Equipo de Desarrollo (Development Team) mismo. Aunque las mejoras pueden implementarse en cualquier momento, la Retrospectiva del Sprint (Sprint Retrospective) ofrece un evento dedicado para este fin, enfocado en la inspección y la adaptación. ",
   "sprint-retro_list_one": "Inspeccionar cómo fue el último Sprint en cuanto a personas, relaciones, procesos y herramientas; ",
   "sprint-retro_list_two": "Identificar y ordenar los elementos más importantes que salieron bien y las posibles mejoras; y, ",
-  "sprint-retro_list_three": "Crear un plan para implementar las mejoras a la forma en la que el Equipo Scrum  desempeña su trabajo. ."
+  "sprint-retro_list_three": "Crear un plan para implementar las mejoras a la forma en la que el Equipo Scrum  desempeña su trabajo. .",
+  "product-increment_done": "Item cumple con la definicion de \"Terminado\"",
+  "requirement_desc": "Crear vista de login/logout",
+  "sprint-planning__event-time": "8hs en un mes de sprint",
+  "answer": "contesta",
+  "sprint-goal": "Objetivo del Sprint",
+  "daily-scrum_event-time": "15min cada 24hs",
+  "daily-scrum_what-did": "Que hice ayer?",
+  "daily-scrum_what-will": "Que haré hoy?",
+  "daily-scrum_impediments": "Tengo algún impedimento?",
+  "inspect-adapt": "Inspeccionar y Adaptar",
+  "sprint-review_refactor":"Modificar Pila de Producto (si es necesario)",
+  "sprint-review_event-time": "4hs en un mes de sprint",
+  "sprint-retro_event-time": "3hs en un mes de sprint",
+  "inspect": "inspeccionar",
+  "identify": "identificar",
+  "create": "crear",
+  "sprint-retro_inspect": "Relaciones procesos y herramientas",
+  "sprint-retro_identify": "Elementos que salieron bien",
+  "sprint-retro_create": "Nuevo plan de trabajo",
+  "organization": "Organización",
+  "roles_scrum-master_v2": "Scrum Master",
+  "roles_product-owner_v2": "Prop Del Producto",
+  "roles_dev-team_v2": "Eq. se Desarrollo",
+  "per-team": "por equipo",
+  "sprint-backlog_img": "sprint_backlog_panel_es.svg",
+  "product-backlog_img": "product_backlog_panel_es.svg",
+  "ownership_img": "ownership_es.svg"
 }
