ScrumMaster - Fixing typo and image preview

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,7 @@
   "values_openness": "openness",
   "values_respect": "Respect",
   "roles_scrum-master": "Scrum Master",
-  "roles_product-owner": "Prduct Owner",
+  "roles_product-owner": "Product Owner",
   "roles_dev-team": "Dev Team",
   "avatar_mssge_welcome_one": "Hey, I’m the <strong>Scrum Master</strong>, my role is to coach and guide you to understand Scrum. Well, if you want to know more then <strong> click on any of the titles below! </strong>",
   "avatar_mssge_events_one": "Prescribed events are used in Scrum to create regularity and to minimize the need for meetings not defined in Scrum. All events are time-boxed events, such that every event has a maximum duration. Once a Sprint begins, its duration is fixed and cannot be shortened or lengthened.",
@@ -162,7 +162,7 @@
   "sprint-retro_create": "New plan of work",
   "organization": "Organization",
   "roles_scrum-master_v2": "Scrum Master",
-  "roles_product-owner_v2": "Prduct Owner",
+  "roles_product-owner_v2": "Product Owner",
   "roles_dev-team_v2": "Dev Team",
   "per-team": "per team",
   "sprint-backlog_img": "sprint_backlog_panel.svg",
