--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -71,11 +71,11 @@
   "sprint-backlog_two": "Cuando se requiere nuevo trabajo, el Equipo de Desarrollo (Development Team) lo adiciona a la Pila del Sprint (Sprint Backlog). A medida que el trabajo se ejecuta o se completa se va actualizando la estimación de trabajo restante. Cuando algún elemento del plan se considera innecesario, es eliminado. Solo el Equipo de Desarrollo (Development Team) puede cambiar su Pila del Sprint (Sprint Backlog) durante un Sprint. La Pila del Sprint (Sprint Backlog) es una imagen visible en tiempo real del trabajo que el Equipo de Desarrollo (Development Team) planea llevar a cabo durante el Sprint y pertenece únicamente al Equipo de Desarrollo (Development Team).",
   "product-increment_one": "El Incremento es la suma de todos los elementos de la Pila del Producto (Product Backlog) completados durante un Sprint y el valor de los incrementos de todos los Sprints anteriores. Al final de un Sprint el nuevo Incremento debe estar “Terminado”, lo cual significa que está en condiciones de ser utilizado y que cumple la Definición de “Terminado” del Equipo Scrum.",
   "product-increment_two": "El incremento debe estar en condiciones de utilizarse sin importar si el Propietario del Producto (Product Owner) decide liberarlo o no.",
-  "scrum-master_po_one": "Encontrar técnicas para gestionar la Pila del Producto (Product Backlog) de manera efectiva;",
-  "scrum-master_po_two": "Ayudar al Equipo Scrum a entender la necesidad de contar con elementos de Pila del Producto claros y concisos; ",
+  "scrum-master_po_one": "Asegurar que los objetivos, el alcance y el dominio del producto sean entendidos por todos en el equipo Scrum (Scrum Team) de la mejor manera posible;",
+  "scrum-master_po_two": "Encontrar técnicas para gestionar la Pila del Producto (Product Backlog) de manera efectiva;",
   "scrum-master_po_three": "Entender la planificación del producto en un entorno empírico;",
   "scrum-master_po_four": "Asegurar que el Propietario del Producto (Product Owner) conozca cómo ordenar la Pila del Producto (Product Backlog) para maximizar el valor; ",
-  "scrum-master_po_five": "Ensuring the Product Owner knows how to arrange the Product Backlog to maximize value;",
+  "scrum-master_po_five": "Ayudar al Equipo Scrum a entender la necesidad de contar con elementos de Pila del Producto claros y concisos; ",
   "scrum-master_po_six": "Entender y practicar la agilidad; y,",
   "scrum-master_po_seven": "Facilitar los eventos de Scrum según se requiera o necesite. ",
   "scrum-master_dt_one": "Guiar al Equipo de Desarrollo (Development Team) en ser auto-organizado y multifuncional; ",
@@ -163,7 +163,7 @@
   "sprint-retro_create": "Nuevo plan de trabajo",
   "organization": "Organización",
   "roles_scrum-master_v2": "Scrum Master",
-  "roles_product-owner_v2": "Prop Del Producto",
+  "roles_product-owner_v2": "Prop. del Producto",
   "roles_dev-team_v2": "Eq. se Desarrollo",
   "per-team": "por equipo",
   "sprint-backlog_img": "sprint_backlog_panel_es.svg",
